Create head element

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
- 
+  <meta name="author" content="Abduselam Awel">
+  <meta name="description" content="Simple calculator app">
+  <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.png">
+
   <title>Calculator</title>
 </head>
 <body>
-  
+
 </body>
 </html>
