Structure html body

--- a/index.html
+++ b/index.html
@@ -11,6 +11,69 @@
   <title>Calculator</title>
 </head>
 <body>
-
+  <section class="container">
+    <section class="screen">
+      <div class="screen__main"></div>
+      <div class="screen__result"></div>
+    </section>
+    <section class="btns">
+      <div class="btns__ctrl">
+        <div class="ctrl clr">clear</div>
+        <div class="ctrl left">&gt;</div>
+        <div class="ctrl right">&lt;</div>
+        <div class="ctrl back">del</div>
+      </div>
+      <div class="btns__nums">
+        <div class="btn num">
+          1
+        </div>
+        <div class="btn num">
+          2
+        </div>
+        <div class="btn num">
+          3
+        </div>
+        <div class="btn optr">
+          +
+        </div>
+        <div class="btn num">
+          4
+        </div>
+        <div class="btn num">
+          5
+        </div>
+        <div class="btn num">
+          6
+        </div>
+        <div class="btn optr">
+          -
+        </div>
+        <div class="btn num">
+          7
+        </div>
+        <div class="btn num">
+          8
+        </div>
+        <div class="btn num">
+          9
+        </div>
+        <div class="btn optr">
+          ×
+        </div>
+        <div class="btn dot">
+          .
+        </div>
+        <div class="btn num">
+          0
+        </div>
+        <div class="btn equal">
+          =
+        </div>
+        <div class="btn optr">
+          ÷
+        </div>
+      </div>
+    </section>
+  </section>
 </body>
 </html>
