Style the document

--- a/index.html
+++ b/index.html
@@ -6,22 +6,32 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="author" content="Abduselam Awel">
   <meta name="description" content="Simple calculator app">
+
   <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.png">
+  <link rel="stylesheet" href="./style/main.css">
 
   <title>Calculator</title>
 </head>
 <body>
   <section class="container">
     <section class="screen">
-      <div class="screen__main"></div>
+      <div class="screen__main">7</div>
       <div class="screen__result"></div>
     </section>
     <section class="btns">
       <div class="btns__ctrl">
-        <div class="ctrl clr">clear</div>
-        <div class="ctrl left">&gt;</div>
-        <div class="ctrl right">&lt;</div>
-        <div class="ctrl back">del</div>
+        <div class="ctrl clr">
+          clear
+        </div>
+        <div class="ctrl left">
+          &gt;
+        </div>
+        <div class="ctrl right">
+          &lt;
+        </div>
+        <div class="ctrl back">
+          del
+        </div>
       </div>
       <div class="btns__nums">
         <div class="btn num">
