add multiple theme

--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
   <link rel="stylesheet" href="./style/main.css">
 
   <title>Calculator</title>
+
+  <script src="./script/main.js" defer></script>
 </head>
-<body>
+<body data-theme="light">
+  <button class="theme-toggle">Dark</button>
   <section class="container">
     <section class="screen">
-      <div class="screen__main">7</div>
+      <div class="screen__main">
+        7
+      </div>
       <div class="screen__result"></div>
     </section>
     <section class="btns">
