Control writting on screen
The code that control the behavior of writting numbers,operat6and dot has been handdled

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
   <button class="theme-toggle">Dark</button>
   <section class="container">
     <section class="screen">
-      <div class="screen__main">
-        7
-      </div>
+      <div class="screen__main"></div>
       <div class="screen__result"></div>
     </section>
     <section class="btns">
