Complete style and visual effects

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
   <script src="./script/main.js" defer></script>
 </head>
-<body data-theme="light">
-  <button class="theme-toggle">Dark</button>
+<body data-theme="dark">
+
+  <button class="theme-toggle"> Dark </button>
+
   <section class="container">
     <section class="screen">
       <div class="screen__main"></div>
