--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.png">
   <link rel="stylesheet" href="./style/main.css">
 
-  <title>Calculator</title>
-
-  <script src="./script/main.js" defer></script>
+  <title>Calculator</title> 
+   <script type="module" src="./script/main.js"></script>
 </head>
 <body data-theme="dark">
 
