--- a/index.html
+++ b/index.html
@@ -1,93 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="author" content="Abduselam Awel">
-  <meta name="description" content="Simple calculator app">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.png">
-  <link rel="stylesheet" href="./style/main.css">
+	<meta name="author" content="Abduselam Awel">
+	<meta name="description" content="Simple calculator app">
 
-  <title>Calculator</title> 
-   <script type="module" src="./script/main.js"></script>
+	<link rel="shortcut icon" type="image/x-icon" href="./images/favicon.png">
+	<link rel="stylesheet" href="./style/main.css">
+
+	<title>Calculator</title>
+
+	<script type="module" src="./script/main.js"></script>
 </head>
 <body data-theme="dark">
 
-  <button class="theme-toggle"> Dark </button>
+	<button class="theme-toggle"> Dark </button>
 
-  <section class="container">
-    <section class="screen">
-      <div class="screen__main"></div>
-      <div class="screen__result"></div>
-    </section>
-    <section class="btns">
-      <div class="btns__ctrl">
-        <div class="ctrl clr">
-          clear
-        </div>
-        <div class="ctrl left">
-          (
-        </div>
-        <div class="ctrl right">
-          )
-        </div>
-        <div class="ctrl back">
-          del
-        </div>
-      </div>
-      <div class="btns__nums">
-        <div class="btn num">
-          1
-        </div>
-        <div class="btn num">
-          2
-        </div>
-        <div class="btn num">
-          3
-        </div>
-        <div class="btn optr">
-          +
-        </div>
-        <div class="btn num">
-          4
-        </div>
-        <div class="btn num">
-          5
-        </div>
-        <div class="btn num">
-          6
-        </div>
-        <div class="btn optr">
-          -
-        </div>
-        <div class="btn num">
-          7
-        </div>
-        <div class="btn num">
-          8
-        </div>
-        <div class="btn num">
-          9
-        </div>
-        <div class="btn optr">
-          ×
-        </div>
-        <div class="btn dot">
-          .
-        </div>
-        <div class="btn num">
-          0
-        </div>
-        <div class="btn equal">
-          =
-        </div>
-        <div class="btn optr">
-          ÷
-        </div>
-      </div>
-    </section>
-  </section>
+	<section class="container">
+
+		<section class="screen">
+			<!-- number writing screen -->
+			<div class="screen__main"></div>
+			<!-- number result shower screen -->
+			<div class="screen__result"></div>
+		</section>
+		<section class="btns">
+			<div class="btns__ctrl">
+				<div class="ctrl clr">
+					clear
+				</div>
+				<div class="ctrl left">
+					(
+				</div>
+				<div class="ctrl right">
+					)
+				</div>
+				<div class="ctrl back">
+					del
+				</div>
+</div>
+<!-- number and operator buttons -->
+			<div class="btns__nums">
+				<div class="btn num">
+					1
+				</div>
+				<div class="btn num">
+					2
+				</div>
+				<div class="btn num">
+					3
+				</div>
+				<div class="btn optr">
+					+
+				</div>
+				<div class="btn num">
+					4
+				</div>
+				<div class="btn num">
+					5
+				</div>
+				<div class="btn num">
+					6
+				</div>
+				<div class="btn optr">
+					-
+				</div>
+				<div class="btn num">
+					7
+				</div>
+				<div class="btn num">
+					8
+				</div>
+				<div class="btn num">
+					9
+				</div>
+				<div class="btn optr">
+					×
+				</div>
+				<div class="btn dot">
+					.
+				</div>
+				<div class="btn num">
+					0
+				</div>
+				<div class="btn equal">
+					=
+				</div>
+				<div class="btn optr">
+					÷
+				</div>
+			</div>
+		</section>
+	</section>
 </body>
 </html>
