--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <meta name="author" content="Abduselam Awel">
-  <meta name="description" content="Simple calculator app">
+  <meta name="description" content="Here is your calculator to calculate simple math equations like basic operations, trigonometric functions, logarithms and so on try it ...">
+
+  <meta property="og:title" content="Abdu Calculator">
+  <meta property="og:description" content="Here is your calculator to calculate simple math equations like basic operations, trigonometric functions, logarithms and so on try it ...">
+  <meta property="og:image" content="https://abdus-calculator.netlify.app/screenshots/descriprion-img.jpg">
+  <meta property="og:url" content="https://abdus-calculator.netlify.app">
 
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.png">
   <link rel="stylesheet" href="./style/main.css">
